--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ fastapi = {extras = ["standard"], version = "^0.112.0"}
 ruff = "^0.5.6"
 pytest = "^8.3.2"
 pytest-cov = "^5.0.0"
+httpx = "^0.27.0"
 taskipy = "^1.13.0"
 
 [tool.taskipy.tasks]
