--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.12.*"
 fastapi = {extras = ["standard"], version = "^0.112.0"}
+sqlalchemy = "^2.0.32"
+pydantic-settings = "^2.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
