Finalizando configuração do .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
-
-database.bd
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -181,3 +179,4 @@ pyrightconfig.json
 
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
 
+database.db
