--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ fastapi = {extras = ["standard"], version = "^0.112.0"}
 sqlalchemy = "^2.0.32"
 pydantic-settings = "^2.4.0"
 alembic = "^1.13.2"
+pyjwt = "^2.9.0"
+pwdlib = {extras = ["argon2"], version = "^0.2.1"}
+tzdata = "^2024.1"
+python-multipart = "^0.0.9"
 
 
 [tool.poetry.group.dev.dependencies]
