--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest-cov = "^5.0.0"
 httpx = "^0.27.0"
 taskipy = "^1.13.0"
 factory-boy = "^3.3.1"
+freezegun = "^1.5.1"
 
 [tool.taskipy.tasks]
 run = 'fastapi dev fast_zero/app.py'
