--- a/compose.yaml
+++ b/compose.yaml
@@ -5,12 +5,12 @@ services:
       - pgdata:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: app_user
-      POSTGRES_DB: app_db
       POSTGRES_PASSWORD: app_password
+      POSTGRES_DB: app_db
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: [ "CMD", "pg_isready", "-q", "-d", "${POSTGRES_DB}", "-U", "${POSTGRES_USER}" ]
       interval: 5s
       timeout: 5s
       retries: 10
